--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movies</title>
+    <link type="image/png" sizes="16x16" rel="icon" href="/icons8-a-16.png">
+    <title>AnimesFlix</title>
   </head>
   <body>
     <div id="root"></div>
